clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/demo-vcluster-01.kubernetes.zufardhiyaulhaq.com/demo-vcluster-01-kubernetes-zufardhiyaulhaq-com-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: demo-vcluster-01-kubernetes-zufardhiyaulhaq-com-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        ports:
        - "20443"
    when:
    - key: connection.sni
      values:
      - demo-vcluster-01.kubernetes.zufardhiyaulhaq.com
